chore: revert cli help smoke test attempt - Removed failing cli_help_snapshots test scaffolding to satisfy clippy until a non-deprecated helper is chosen.

--- a/specs/Public/R15.status.md
+++ b/specs/Public/R15.status.md
@@ -20,9 +20,9 @@
 
 **Verification**
 
-- Unit tests for configuration merging and precedence (system/user/repo/repo-user/env/flags) plus provenance reporting.
-- CLI parsing/unit tests covering agent/model/instances accumulation, default agent handling, and `--non-interactive` exit 10 cases.
-- Help/JSON snapshot tests to lock the updated flag set (`cargo test -p ah-cli --test cli_help_snapshots` extension).
+- [ ] Unit tests for configuration merging and precedence (system/user/repo/repo-user/env/flags) plus provenance reporting.
+- [x] CLI parsing/unit tests covering agent/model/instances accumulation, default agent handling, and `--non-interactive` exit 10 cases.
+- [ ] Help/JSON snapshot tests to lock the updated flag set (`cargo test -p ah-cli --test cli_help_snapshots` extension).
 
 ### M2. Prompt intake, branch protection, and task record creation
 
@@ -35,9 +35,9 @@
 
 **Verification**
 
-- Unit tests for prompt processing (template stripping, comment handling, empty detection) and branch validation (regex, primary protection, follow-up detection).
-- Tests for metadata commit generation and `.agents/tasks` path/content (including follow-up delimiter, dev-shell line, remote discovery).
-- Scenario tests under `tests/tools/mock-agent/scenarios/` covering new task creation vs. follow-up, `--create-task-files` toggles, and push prompt behaviors.
+- [ ] Unit tests for prompt processing (template stripping, comment handling, empty detection) and branch validation (regex, primary protection, follow-up detection).
+- [ ] Tests for metadata commit generation and `.agents/tasks` path/content (including follow-up delimiter, dev-shell line, remote discovery).
+- [ ] Scenario tests under `tests/tools/mock-agent/scenarios/` covering new task creation vs. follow-up, `--create-task-files` toggles, and push prompt behaviors.
 
 ### M3. Execution planning, workspace selection, and multi-agent/fleet orchestration
 
@@ -50,10 +50,10 @@
 
 **Verification**
 
-- Integration tests that drive `ah task` through local and remote code paths, asserting workspace selection records, task state persistence, `.agents/tasks` updates, and metadata commits.
-- Scenario tests for multi-agent and multi-instance launches plus fleet orchestration (local leader + remote member stubs) with mock agent recordings.
-- Regression test ensuring cloud-agent/browser automation flags are rejected with clear messaging.
-- Integration test that `--follow` opens the correct monitoring UI and attaches to the new session/task ID.
+- [ ] Integration tests that drive `ah task` through local and remote code paths, asserting workspace selection records, task state persistence, `.agents/tasks` updates, and metadata commits.
+- [ ] Scenario tests for multi-agent and multi-instance launches plus fleet orchestration (local leader + remote member stubs) with mock agent recordings.
+- [ ] Regression test ensuring cloud-agent/browser automation flags are rejected with clear messaging.
+- [ ] Integration test that `--follow` opens the correct monitoring UI and attaches to the new session/task ID.
 
 ### M4. Delivery paths, push behavior, and branch/file safety
 
@@ -65,9 +65,9 @@
 
 **Verification**
 
-- Integration tests for delivery modes (branch/pr/patch) covering push prompts, `--push-to-remote` automation, and failure rollback.
-- Unit tests for branch target validation and push option parsing (including non-interactive exit 10 without `--push-to-remote`).
-- Scenario-driven tests confirming notifications flag propagation to spawned processes (validated via mock notifier hooks).
+- [ ] Integration tests for delivery modes (branch/pr/patch) covering push prompts, `--push-to-remote` automation, and failure rollback.
+- [ ] Unit tests for branch target validation and push option parsing (including non-interactive exit 10 without `--push-to-remote`).
+- [ ] Scenario-driven tests confirming notifications flag propagation to spawned processes (validated via mock notifier hooks).
 
 ### M5. Docs, help sync, and manual workflow
 
@@ -79,6 +79,6 @@
 
 **Verification**
 
-- `just lint-rust` and `just test-rust` remain green with new coverage.
-- Manual test script runs without intervention following the documented steps; logs stored per run for troubleshooting.
-- Documentation spell-check/link-check passes where applicable.
+- [ ] `just lint-rust` and `just test-rust` remain green with new coverage.
+- [ ] Manual test script runs without intervention following the documented steps; logs stored per run for troubleshooting.
+- [ ] Documentation spell-check/link-check passes where applicable.
