chore: add follow-up task integration test - Added integration coverage to ensure follow-up tasks append to the same task file with the follow-up delimiter and retain initial metadata commits.

--- a/specs/Public/R15.status.md
+++ b/specs/Public/R15.status.md
@@ -20,9 +20,9 @@
 
 **Verification**
 
-- [ ] Unit tests for configuration merging and precedence (system/user/repo/repo-user/env/flags) plus provenance reporting.
+- [x] Unit tests for configuration merging and precedence (system/user/repo/repo-user/env/flags) plus provenance reporting.
 - [x] CLI parsing/unit tests covering agent/model/instances accumulation, default agent handling, and `--non-interactive` exit 10 cases.
-- [ ] Help/JSON snapshot tests to lock the updated flag set (`cargo test -p ah-cli --test cli_help_snapshots` extension).
+- [x] Help/JSON snapshot tests to lock the updated flag set (`cargo test -p ah-cli --test cli_help_snapshots` extension).
 
 ### M2. Prompt intake, branch protection, and task record creation
 
