feat: add task scenario coverage and branch handling fixes - Add scenario-driven ah task tests for new branch, follow-up, metadata-only, and push flows - Enhance task branch resolution to validate existing branches even when skipping task files - Add serde_yaml test dependency and update status doc for M2 scenario coverage

--- a/specs/Public/R15.status.md
+++ b/specs/Public/R15.status.md
@@ -35,9 +35,10 @@
 
 **Verification**
 
-- [ ] Unit tests for prompt processing (template stripping, comment handling, empty detection) and branch validation (regex, primary protection, follow-up detection).
-- [ ] Tests for metadata commit generation and `.agents/tasks` path/content (including follow-up delimiter, dev-shell line, remote discovery).
-- [ ] Scenario tests under `tests/tools/mock-agent/scenarios/` covering new task creation vs. follow-up, `--create-task-files` toggles, and push prompt behaviors.
+- [x] Unit tests for prompt processing (template stripping, comment handling, empty detection) and branch validation (regex, primary protection, follow-up detection).
+- [x] Tests for metadata commit generation and `.agents/tasks` path/content (including follow-up delimiter, dev-shell line, remote discovery).
+- [x] Scenario tests under `tests/tools/mock-agent/scenarios/` covering new task creation vs. follow-up, `--create-task-files` toggles, and push prompt behaviors.
+- Notes: Added coverage for editor-hint stripping, inline hash preservation, git `core.commentString` overrides, follow-up branch guards, and scenario fixtures for new/follow-up/metadata-only/push flows.
 
 ### M3. Execution planning, workspace selection, and multi-agent/fleet orchestration
 
