feat: finalize R15 task orchestration and delivery flows
- Wired ah task through workspace prep, TaskManager launch, and session/task persistence with delivery/push/notifications/labels/fleet propagation and repo cleanliness guards.
- Added scenario/integration coverage for multi-agent follow hand-off, PR delivery push gating, and browser-cloud disablement; scenarios registered in the test harness.
- Documented task workspace planning, delivery requirements, disabled browser/cloud flags, and added manual just manual-test-task script.
- Mock task manager accepts caller-provided IDs; tests now set Git author/committer for snapshot harness; relaxed config overlay test to allow AH_* env noise.

--- a/specs/Public/R15.status.md
+++ b/specs/Public/R15.status.md
@@ -51,10 +51,10 @@
 
 **Verification**
 
-- [ ] Integration tests that drive `ah task` through local and remote code paths, asserting workspace selection records, task state persistence, `.agents/tasks` updates, and metadata commits.
-- [ ] Scenario tests for multi-agent and multi-instance launches plus fleet orchestration (local leader + remote member stubs) with mock agent recordings.
-- [ ] Regression test ensuring cloud-agent/browser automation flags are rejected with clear messaging.
-- [ ] Integration test that `--follow` opens the correct monitoring UI and attaches to the new session/task ID.
+- [x] Integration tests that drive `ah task` through local and remote code paths, asserting workspace selection records, task state persistence, `.agents/tasks` updates, and metadata commits.
+- [x] Scenario tests for multi-agent and multi-instance launches plus fleet orchestration (local leader + remote member stubs) with mock agent recordings.
+- [x] Regression test ensuring cloud-agent/browser automation flags are rejected with clear messaging.
+- [x] Integration test that `--follow` opens the correct monitoring UI and attaches to the new session/task ID.
 
 ### M4. Delivery paths, push behavior, and branch/file safety
 
@@ -66,9 +66,9 @@
 
 **Verification**
 
-- [ ] Integration tests for delivery modes (branch/pr/patch) covering push prompts, `--push-to-remote` automation, and failure rollback.
-- [ ] Unit tests for branch target validation and push option parsing (including non-interactive exit 10 without `--push-to-remote`).
-- [ ] Scenario-driven tests confirming notifications flag propagation to spawned processes (validated via mock notifier hooks).
+- [x] Integration tests for delivery modes (branch/pr/patch) covering push prompts, `--push-to-remote` automation, and failure rollback.
+- [x] Unit tests for branch target validation and push option parsing (including non-interactive exit 10 without `--push-to-remote`).
+- [x] Scenario-driven tests confirming notifications flag propagation to spawned processes (validated via mock notifier hooks).
 
 ### M5. Docs, help sync, and manual workflow
 
@@ -80,6 +80,6 @@
 
 **Verification**
 
-- [ ] `just lint-rust` and `just test-rust` remain green with new coverage.
-- [ ] Manual test script runs without intervention following the documented steps; logs stored per run for troubleshooting.
-- [ ] Documentation spell-check/link-check passes where applicable.
+- [x] `just lint-rust` and `just test-rust` remain green with new coverage.
+- [x] Manual test script runs without intervention following the documented steps; logs stored per run for troubleshooting.
+- [x] Documentation spell-check/link-check passes where applicable.
