feat(command-tracing): Capture sub-process output on macOS

--- a/specs/Public/R9.status.md
+++ b/specs/Public/R9.status.md
@@ -70,7 +70,7 @@ The M0-M1 implementation follows a layered architecture with platform-agnostic c
 
 - `crates/ah-command-trace-shim/src/lib.rs` - Core initialization and state management
 - `crates/ah-command-trace-shim/src/core.rs` - Shared state and initialization logic
-- `crates/ah-command-trace-shim/src/posix.rs` - Common POSIX hook implementations using redhook
+- `crates/ah-command-trace-shim/src/posix.rs` - Common POSIX hook implementations using the vendored `stackable-interpose` macros
 - `crates/ah-command-trace-shim/src/platform/macos.rs` - macOS DYLD interposition implementation
 - `crates/ah-command-trace-shim/src/platform/linux.rs` - Linux LD_PRELOAD implementation with additional clone/vfork hooks
 - `crates/ah-command-trace-client/src/lib.rs` - IPC client for sending CommandStart messages
@@ -150,6 +150,7 @@ The M0-M1 implementation follows a layered architecture with platform-agnostic c
   - Background threads writing simultaneously to stdout/stderr.
   - Writes after `fork` but before `exec` (should still attribute to parent command, not phantom command).
   - Programs reassigning stderr to a file; shim should stop capturing once FD no longer points to PTY.
+- [x] macOS regression (Nov 19 2025): `cargo test -p ah-command-trace-e2e-tests shim_captures_mixed_output` on arm64 verifies stdout/stderr chunk capture outside Linux CI.
 
 **Implementation Details**
 
@@ -170,6 +171,10 @@ M2 implementation successfully captures stdout/stderr streams including complex 
   - Removed unsafe `exec*`/`clone`/`vfork` hooks and replaced them with a **self-reporting** path in `initialize_client()`. Each process now announces itself immediately after connecting to the recorder (PID/PPID, argv/env snapshots, cwd, executable) removing the async-signal-safety hazards seen earlier.
   - Connection attempts became **fail-open**: we try once, mark the shim state as `Error` on failure, and allow the target workload to continue without blocking. This eliminated the “dogpile” that previously left Python subprocesses stuck in uninterruptible sleep states.
   - Added helper utilities inside `crates/ah-command-trace-shim/src/posix.rs` to collect binary-safe argv/env/cwd data, ensuring the emitted `CommandStart` frames match recorder expectations.
+- **macOS Interpose Support (Nov 2025 update)**:
+  - Vendored `redhook` into `crates/stackable-interpose` and updated every hook definition to use that crate. The macOS path now emits explicit `__DATA,__interpose` entries marked `#[used]`, preventing `-dead_strip` from dropping our trampolines and finally unlocking stdout/stderr chunk capture on macOS while keeping Linux behavior unchanged.
+  - Restricted interposition of variadic libc entry points (e.g., `fcntl`) to Linux until we can model their pointer arguments safely on macOS. The rest of the FD lifecycle (`write*`, `sendmsg`, `dup*`, `close`) now behaves identically on both platforms.
+  - Confirmed the new path end-to-end by running `cargo test -p ah-command-trace-e2e-tests shim_captures_mixed_output` on Apple Silicon hardware (Nov 19 2025).
 - **Test & Spec Alignment**:
   - `shim_shell_and_interpreter_coverage` now passes consistently (validated with `cargo test -p ah-command-trace-e2e-tests shim_shell_and_interpreter_coverage -- --nocapture`), confirming both shell-launched and Python-launched subprocesses self-report correctly.
   - Documented the rationale and architecture in `specs/Public/Command-Execution-Tracing.md`, covering self-reporting, fail-open connection strategy, artifact management, and verification flow.
